example/src/snapshots/adze_example__repetitions__tests__repetitions_grammar2-2.snap
---
source: src/repetitions.rs
expression: "grammar2::parse(\"1\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [
                Spanned {
                    value: 1,
                    span: (
                        0,
                        1,
                    ),
                },
            ],
            span: (
                0,
                1,
            ),
        },
    },
)
